[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Sprites/arrowsolid.png" type="Texture" id=2]
[ext_resource path="res://UI/Control.gd" type="Script" id=3]
[ext_resource path="res://UI/Title.gd" type="Script" id=4]
[ext_resource path="res://Sprites/gear64.png" type="Texture" id=5]
[ext_resource path="res://Sprites/quit.png" type="Texture" id=6]
[ext_resource path="res://UI/Menu.gd" type="Script" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.37842
margin_top = -2.37836
margin_right = 2.37842
margin_bottom = -2.37842
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = -64.0
margin_right = 128.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlePanel" type="Panel" parent="Title"]
margin_left = 7.0
margin_top = 7.0
margin_right = 249.0
margin_bottom = 57.0

[node name="TitleLabel" type="Label" parent="Title/TitlePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
custom_fonts/font = ExtResource( 1 )
text = "HEX TILE GAME"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="Title"]

[node name="Display" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_right = 1.0
margin_bottom = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Display"]
margin_left = 7.0
margin_top = 7.0
margin_right = 122.0
margin_bottom = 281.0
size_flags_vertical = 3

[node name="DisplayPanel" type="Panel" parent="Display/VBoxContainer"]
margin_right = 115.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Display/VBoxContainer/DisplayPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.86102e-06
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upArrowButton" type="Button" parent="Display/VBoxContainer/DisplayPanel/VBoxContainer"]
margin_left = 36.0
margin_top = 48.0
margin_right = 79.0
margin_bottom = 87.0
size_flags_horizontal = 6
size_flags_vertical = 6
action_mode = 0
keep_pressed_outside = true
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayPanel2" type="Panel" parent="Display/VBoxContainer"]
margin_top = 139.0
margin_right = 115.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Display/VBoxContainer/DisplayPanel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.86102e-06
rect_rotation = 180.0
rect_pivot_offset = Vector2( 57, 67 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="downArrowButton" type="Button" parent="Display/VBoxContainer/DisplayPanel2/VBoxContainer"]
margin_left = 36.0
margin_top = 48.0
margin_right = 79.0
margin_bottom = 87.0
size_flags_horizontal = 6
size_flags_vertical = 6
action_mode = 0
keep_pressed_outside = true
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="PanelContainer" parent="."]
anchor_left = 0.009
anchor_top = 0.016
anchor_right = 0.009
anchor_bottom = 0.016
margin_right = 64.0
margin_bottom = 64.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Menu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 57.0
margin_bottom = 57.0

[node name="MenuButton" type="MenuButton" parent="Menu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
icon = ExtResource( 5 )
items = [ "Quit", ExtResource( 6 ), 0, false, false, 0, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}
